<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="@drawable/fitness">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30dp"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button android:id="@+id/stepCounter"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:text="@string/stepcounter"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"
            android:background="@color/white"
            android:onClick="startStepCounter"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>

    <Button android:id="@+id/bmiIndex"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:text="@string/bmiindex"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:onClick="startBMIIndex"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>



    <Button android:id="@+id/btnHeartactivity"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:text="@string/heartrate"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:onClick="startHeartActivity"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>
    <Button android:id="@+id/btnpdfDownload"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:text="@string/download"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:onClick="downloadPlan"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>

    <Button android:id="@+id/btnStartDownload"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:text="@string/close"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            android:background="@color/colorAccent"
            android:onClick="closeApp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>


</LinearLayout>
