<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/layout">
	<LinearLayout android:id="@+id/top"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal" 
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView android:id="@+id/text"
            android:text="@string/default_text"
            android:textSize="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">        
        </TextView>
        <RelativeLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
	        <com.example.swarna.fitnessapp.HeartbeatView
                android:id="@+id/image"
	        	android:layout_centerInParent="true"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
		    </com.example.swarna.fitnessapp.HeartbeatView>
	    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/heart1">

        <TextView android:id="@+id/text1"
                  android:text="@string/heartinst"
                  android:textColor="@color/white"
                  android:textSize="16dp"
                  android:textStyle="bold"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="10dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        </TextView>
	<SurfaceView android:id="@+id/preview"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="90dp"
		android:layout_width="200dp"
		android:layout_height="200dp">
	</SurfaceView>
        <Button android:id="@+id/btnBack"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:background="@color/red"
                android:onClick="finishHeartActivity"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>
